# test-ci

./: CMakeLists.txt
.github/workflows/: cmake.yml
app/: Main.cpp
lib/foo/: CMakeLists.txt
lib/foo/include/foo/: Add.hpp
lib/foo/src/: Add.cpp
test/: CMakeLists.txt
test/src/: AddTests.cpp
